--- a/CSharp/HW5/HW5/HW5.csproj
+++ b/CSharp/HW5/HW5/HW5.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComplexNumber.cs" />
     <Compile Include="Data.cs" />
+    <Compile Include="Fraction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
