--- a/WinForms/Organizer/Organizer/Organizer.csproj
+++ b/WinForms/Organizer/Organizer/Organizer.csproj
@@ -74,6 +74,7 @@
     <Compile Include="MyBindingList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryDecorator.cs" />
     <Compile Include="XmlIO.cs" />
     <EmbeddedResource Include="AddOrEditEventForm.resx">
       <DependentUpon>AddOrEditEventForm.cs</DependentUpon>
